--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ body {
 
 
 .main-header {
-    height: 70vh;
+    height: 76vh;
     width: 100%;
 }
 
@@ -108,7 +108,7 @@ body {
     /* Slider Button */
 
     .slider-btn {
-        padding: 24px 30px 24px 30px;
+        padding: 22px 25px 22px 25px;
         background-color: var(--black);
         display: flex;
         align-items: center;
@@ -234,11 +234,15 @@ body {
             z-index: 0;
         }
 
+        .nav-logo {
+            margin-top: 0.5px;
+            margin-right: 30px;
+        }
+
         .active {
             display: flex;
             right: 0;
         }
-
         .disable {
             display: none;
             right: -1000px;
@@ -264,6 +268,14 @@ body {
         }
         .mobile-slider-buttons {
             display: flex;
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: var(--black);
+            font-size: 16px;
+            text-transform: lowercase;
+            letter-spacing: 0px;
         }
 
         .slider-btn {
